[package]
name = "torb"
version = "0.1.0"
edition = "2021"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tempfile = "3.3.0"
dirs = "1.0.4"
clap = { version = "3.1.6", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.8"
thiserror = "1.0"
sha2 = "0.10.2"
base64ct = { version = "1.5.1", features = ["alloc"] }
serde_json = "1.0.85"
hcl-rs = "0.10.0"
indexmap = "1.9.1"
memorable-wordlist = "0.1.7"
ureq = { version = "2.5.0", features = ["json"] }
once_cell = "1.15.0"
chrono = "0.4.22"
data-encoding = { version = "2.3.2", features = ["alloc"] }
rayon = "1.6.1"
notify = "5.1.0"
tokio = { version = "1.26.0", features = ["full"] }
colored = "2.0.0"
rust-embed = "6.6.0"
gif = "0.12.0"
drawille = "0.3.0"
image = "0.24.5"
crossterm = "0.26.1"